--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-      <% include ./partials/head.ejs %>
+
   </head>
   <body>
 
       <!-- Navigation -->
-      <% include ./partials/navbar.ejs %>
+
 
       <!-- Page Content -->
       <main class="container">
 
-
         <!-- Jumbotron Header -->
         <header class="jumbotron my-4">
-          <h1 class="display-3">Welcome to Blocipedia</h1>
-          <p class="lead">A wiki application</p>
-          <a href="/users/signup" class="btn btn-primary btn-lg">Sign up</a>
+          <h1 class="display-3">Welcome to Bloccit</h1>
+          <p class="lead">An application for users to share information.</p>
+          <a href="/users/sign_up" class="btn btn-primary btn-lg">Sign up</a>
         </header>
 
         <!-- Page Features -->
@@ -43,6 +42,6 @@
       </main>
       <!-- /.container -->
 
-      <% include ./partials/baseScripts.ejs %>
+
     </body>
 </html>
