--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -14,8 +14,10 @@
         <!-- Jumbotron Header -->
         <header class="jumbotron my-4">
           <h1 class="display-3">Welcome to Blocipedia</h1>
-          <p class="lead">An wiki application.</p>
-          <a href="/users/sign_up" class="btn btn-primary btn-lg">Sign up</a>
+          <p class="lead">A wiki application.</p>
+          <% if(!currentUser){ %>
+            <a href="/users/sign_up" class="btn btn-primary btn-lg">Sign up</a>
+          <% } %>
         </header>
 
         <!-- Page Features -->
