--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -11,8 +11,9 @@
         </li>
         <% if(currentUser) { %>
           <li class="nav-item">
-            <a class="nav-link" href="/users/<%= currentUser.id %>">Profile</a>
+            <a class="nav-link" href="/wikis">Wikis</a>
           </li>
+
           <li class="nav-item">
             <a class="nav-link" href="/users/sign_out">Sign out</a>
           </li>
