--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -17,6 +17,11 @@
           <li class="nav-item">
             <a class="nav-link" href="/users/sign_out">Sign out</a>
           </li>
+          <% if(currentUser.role == 0) { %>
+            <li class="nav-item">
+              <a class="nav-link" href="/users/payment">Upgrade to Premium</a>
+            </li>
+            <% } %>
           <% } else { %>
             <li class="nav-item">
               <a class="nav-link" href="/users/sign_up">Sign up</a>
