--- a/src/views/wikis/edit.ejs
+++ b/src/views/wikis/edit.ejs
@@ -18,9 +18,16 @@
         </div>
         <div class="form-group">
           <label for="body">Wiki body</label>
-          <textarea rows="4" class="form-control" name="body" placeholder="Enter Description"><%= wiki.body %></textarea>
+          <textarea rows="4" class="form-control" name="body" placeholder="Enter Body"><%= wiki.body %></textarea>
           <small class="text-muted" id="bodyHelp">body must be 6 or more characters in length.</small>
         </div>
+        <% if(currentUser.role !== 0 && (wiki.userId === currentUser.id)){ %>
+          <div class="form-group">
+            <label for="private">Wiki private</label>
+            <textarea rows="4" class="form-control" name="private" placeholder="Is this a private wiki? (true/false)"><%= wiki.private %></textarea>
+            <small class="text-muted" id="bodyHelp">Must be "true" or "false" exactly</small>
+          </div>
+          <% } %>
         <button type="submit" class="btn btn-primary">Update</button>
       </form>
     </main>
