--- a/src/views/wikis/new.ejs
+++ b/src/views/wikis/new.ejs
@@ -19,9 +19,16 @@
         </div>
         <div class="form-group">
           <label for="body">Wiki body</label>
-          <textarea rows="4" class="form-control" name="body" placeholder="Enter Post body"></textarea>
+          <textarea rows="4" class="form-control" name="body" placeholder="Enter Wiki body"></textarea>
           <small class="text-muted" id="bodyHelp">body must be 6 or more characters in length.</small>
         </div>
+        <% if(currentUser.role !== 0){ %>
+          <div class="form-group">
+            <label for="private">Wiki private</label>
+            <textarea rows="4" class="form-control" name="private" placeholder="Is this a private wiki? (true/false)"></textarea>
+            <small class="text-muted" id="bodyHelp">Must be "true" or "false" exactly</small>
+          </div>
+        <% } %>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </main>
