--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -9,16 +9,17 @@
     <main class="container">
       <% include ../static/partials/messages.ejs %>
 
-      <div style="display: flex; align-items:center;">
-        <h1><%= wiki.title %></h1>
-      </div>
+
+      <%= wiki.title %>
+
+      <br>
 
       <a href="/wikis/<%= wiki.id %>/edit" class="btn btn-warning">Edit</a>
       <form style="display:initial" action="/wikis/<%= wiki.id %>/destroy" method="post">
         <button type="submit" class="btn btn-danger">Delete</button>
       </form>
 
-      <p><%= wiki.body %></p>
+      <%- markdown.toHTML(wiki.body) %>
 
     </main>
 
