Checkpoint: Wiki Collaborators: Completed

--- a/src/views/wikis/edit.ejs
+++ b/src/views/wikis/edit.ejs
@@ -31,6 +31,22 @@
         <button type="submit" class="btn btn-primary">Update</button>
       </form>
 
+      <hr>
+
+
+      <h2>Collaborators</h2>
+
+
+
+
+
+      <hr>
+
+      <h2>Non Collaborators</h2>
+
+
+
+      
 
 
     </main>
