--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -13,23 +13,16 @@
         <% include ../static/partials/messages.ejs %>
         <!-- Jumbotron Header -->
         <header class="jumbotron my-4">
-          <h1 class="display-3">Welcome to Blocipedia</h1>
+          <h1 class="display-3">Welcome to Wiki Pages</h1>
           <p class="lead">A wiki application.</p>
           <% if(!currentUser){ %>
-            
+
           <% } %>
         </header>
 
-        <!-- Page Features -->
-        <section class="row text-center">
-
-
-
-        </section>
-        <!-- /.row -->
 
       </main>
-      <!-- /.container -->
+      
 
       <% include ./partials/baseScripts.ejs %>
     </body>
