--- a/src/views/users/sign_up.ejs
+++ b/src/views/users/sign_up.ejs
@@ -13,7 +13,7 @@
 
 
 
-      <h2>Welcome to Blocipedia</h2>
+      <h2>Welcome to Wiki Pages</h2>
        <div class="row">
          <div class="col-md-8">
            <form method="POST" action="/users">
